primeiro commit versao 1

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
     </section>
 
     <section id="repo-info" class="container">
-        <h2>Repositórios Públicos</h2>
+        <h2 class="reposTitle">Repositórios Públicos</h2>
+        <span class="reposTotal" id="repoTotal"></span>
         <div class="cards">
+            <h2>Nenhum repositório listado</h2>
         </div>
     </section>
     <footer class="footer container">
