--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body id="body">
     <header id="header" class="container">
-        <a href="#"><img src="/img/logopghubfree.svg" alt="" srcset=""></a>
+        <a href="#"><img src="./img/logopghubfree.svg" alt="" srcset=""></a>
     </header>
     <main class="container" id="main">
         <h1>Pesquisar repositórios de maneira fácil</h1>
