add axios with cdn

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <p>Alguns direitos reservados</p>
     </footer>
     
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="node_modules/axios/dist/axios.min.js"></script>
     <script src="./script.js"></script>
 </body>
