refatorado com classes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Informaçoes públicas de repositórios GitHub de maneira rápida e fácil</h2>
             <form class="box-search container">
                 <input type="search" id="field-src" placeholder="Procurar por usuário..." value="">
-                <button class="button-src" id="button-src" onclick="getValue(event)" type="submit"></button>
+                <button class="button-src" id="button-src" onclick="Values.getValue(event)" type="submit"></button>
             </form>
     </main>
 
