--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Informaçoes públicas de repositórios GitHub de maneira rápida e fácil</h2>
             <form class="box-search container">
                 <input type="search" id="field-src" placeholder="Procurar por usuário..." value="">
-                <button class="button-src" id="button-src" onclick="Values.getValue(event)" type="submit"></button>
+                <button class="button-src" id="button-src" onclick="App.init()" type="submit"></button>
             </form>
     </main>
 
@@ -35,7 +35,7 @@
                     <li><p class="p-description">Nome:</p><p id="userLogin"></p></li>
                     <li><p class="p-description">ID: </p><p id="userID"></p></li>
                     <li><p class="p-description">Tipo de Usuario: </p><p id="userType"></p></li>
-                    <li><p class="p-description">Empresa: </p><p id="userCompany"></p></li>
+                    <li class="user-descript"><p class="p-description">Empresa(s): </p><p id="userCompany"></p></li>
                     <li><a href="" id="userUrl" target="_blank" rel="noopener noreferrer">view on GitHub</a></li>
                 </ul>
            </div>
